// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Search renders disabled 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hZiMVj ejLjyl"
    disabled={true}
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      medium
    </label>
    <input
      className="sc-hQikvm kjvnfL"
      disabled={true}
      placeholder=" "
      type="search"
      value="Text"
    />
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hZiMVj ejLjyl"
    disabled={true}
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      large
    </label>
    <input
      className="sc-hQikvm cwcNaw"
      disabled={true}
      placeholder=" "
      type="search"
      value="Text"
    />
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hZiMVj ejLjyl"
    disabled={true}
  >
    <div
      className="sc-eZkcaX fwAgtM"
    >
      <input
        className="sc-hQikvm kMCGiK"
        disabled={true}
        placeholder=" "
        type="search"
        value="Text"
      />
      <label
        className="sc-hhICeM dxUkQc"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Search renders error 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      medium
    </label>
    <input
      className="sc-hQikvm fQiIiJ"
      placeholder="e.g. EPL"
      type="search"
    />
    <p
      className="sc-McAUB fEGrYJ"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      large
    </label>
    <input
      className="sc-hQikvm icNZZq"
      placeholder="e.g. EPL"
      type="search"
    />
    <p
      className="sc-McAUB fEGrYJ"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <div
      className="sc-eZkcaX fwAgtM"
    >
      <input
        className="sc-hQikvm gZdjbA"
        placeholder="e.g. EPL"
        type="search"
      />
      <label
        className="sc-hhICeM dxUkQc"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-McAUB fEGrYJ"
      role="alert"
    >
      Error message
    </p>
  </div>
</div>
`;

exports[`TextInput: type Search renders readOnly 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      medium
    </label>
    <input
      className="sc-hQikvm kjvnfL"
      placeholder=" "
      readOnly={true}
      type="search"
      value="Read only text"
    />
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      large
    </label>
    <input
      className="sc-hQikvm cwcNaw"
      placeholder=" "
      readOnly={true}
      type="search"
      value="Read only text"
    />
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <div
      className="sc-eZkcaX fwAgtM"
    >
      <input
        className="sc-hQikvm kMCGiK"
        placeholder=" "
        readOnly={true}
        type="search"
        value="Read only text"
      />
      <label
        className="sc-hhICeM dxUkQc"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Search renders with hint 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      medium
    </label>
    <input
      className="sc-hQikvm kjvnfL"
      placeholder="e.g. EPL"
      type="search"
    />
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      large
    </label>
    <input
      className="sc-hQikvm cwcNaw"
      placeholder="e.g. EPL"
      type="search"
    />
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <div
      className="sc-eZkcaX fwAgtM"
    >
      <input
        className="sc-hQikvm kMCGiK"
        placeholder="e.g. EPL"
        type="search"
      />
      <label
        className="sc-hhICeM dxUkQc"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Search renders with label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      medium
    </label>
    <input
      className="sc-hQikvm kjvnfL"
      placeholder="e.g. EPL"
      type="search"
    />
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      large
    </label>
    <input
      className="sc-hQikvm cwcNaw"
      placeholder="e.g. EPL"
      type="search"
    />
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <div
      className="sc-eZkcaX fwAgtM"
    >
      <input
        className="sc-hQikvm kMCGiK"
        placeholder="e.g. EPL"
        type="search"
      />
      <label
        className="sc-hhICeM dxUkQc"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders with label RTL 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
      dir="rtl"
    >
      medium
    </label>
    <input
      className="sc-hQikvm kjvnfL"
      dir="rtl"
      placeholder="e.g. EPL"
      type="search"
    />
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
      dir="rtl"
    >
      large
    </label>
    <input
      className="sc-hQikvm cwcNaw"
      dir="rtl"
      placeholder="e.g. EPL"
      type="search"
    />
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <div
      className="sc-eZkcaX fwAgtM"
    >
      <input
        className="sc-hQikvm kMCGiK"
        dir="rtl"
        placeholder="e.g. EPL"
        type="search"
      />
      <label
        className="sc-hhICeM cryZUP"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders without label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <input
      className="sc-hQikvm kjvnfL"
      placeholder="medium"
      type="search"
    />
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <input
      className="sc-hQikvm cwcNaw"
      placeholder="large"
      type="search"
    />
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <div
      className="sc-eZkcaX fwAgtM"
    >
      <input
        className="sc-hQikvm gIlWtb"
        placeholder="xlarge"
        type="search"
      />
      <label
        className="sc-hhICeM dxUkQc"
      />
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search supports background colour 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      medium
    </label>
    <input
      className="sc-hQikvm A-dnmQ"
      placeholder="e.g. EPL"
      type="search"
    />
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      large
    </label>
    <input
      className="sc-hQikvm iDFTyL"
      placeholder="e.g. EPL"
      type="search"
    />
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <div
      className="sc-eZkcaX huZTyb"
    >
      <input
        className="sc-hQikvm kMCGiK"
        placeholder="e.g. EPL"
        type="search"
      />
      <label
        className="sc-hhICeM dxUkQc"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;
